# audiobook_scripts

./: .gitignore  README.md  audiobook_manager.py  exceptions.py  models.py  pyproject.toml  service.py  utils.py
tests/: test_architecture.py  test_cli.py  test_config.py  test_logic.py  test_service.py  test_service_advanced.py  test_tui_features.py
ui/: screens.py  widgets.py
