[project]
name = "audiobook-scripts"
version = "0.1.0"
description = "A unified, keyboard-centric terminal user interface for managing your Audible library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "watchdog>=3.0.0",
    "platformdirs>=4.0.0",
    "audible>=0.9.0",
]

[project.scripts]
audiobook-manager = "audiobook_manager:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
