[project]
name = "tome"
version = "0.1.0"
description = "A unified, keyboard-centric terminal user interface for managing your Audible library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "watchdog>=3.0.0",
    "platformdirs>=4.0.0",
    "audible>=0.9.0",
]

[project.scripts]
tome = "audiobook_manager:main"

[tool.setuptools]
py-modules = ["audiobook_manager", "models", "service", "utils", "exceptions"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
